--- a/site_signal/src/components/HomePage/Solutions/solutions.css
+++ b/site_signal/src/components/HomePage/Solutions/solutions.css
@@ -1,201 +1,281 @@
-@keyframes fadeInAnimation {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
+/* Animações */
+
+.textFadeIn {
+    opacity: 1;
+    animation: fade-in 2s;
 }
 
+@keyframes fade-in {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+
+/* CSS */
+
+/* HomePage */
 .solutionsContainer {
-    display: flex;
-    background-image: url("../../../assets/imgs/solucoesBackground.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center; 
-    justify-content: center;
-    flex-direction: column;
-    width: 100%;
-    margin-top: -20%;
-    margin-bottom: 48px;
-    padding-top: 244px;
-    padding-left: 72px;
-    padding-right: 72px;
-}
-
-.solutionsContainer .flex {
-    display: flex;
-}
-
-.solutionsContainerButtons{
-    display: flex;
-    justify-content : space-evenly;
-    gap: 1.5rem;
-}
-
-#solutionsButtonClicked {
-    width: 267.56px;
-    height: 88px;
-    font-family: "Saira";
-    font-size: 25px;
-    color: white;
-    border-radius: 50px;
-    border: white 3px solid;
-    margin: 10px 10px;
+    margin-top: -172px;
+    position: relative;
     
+ }
+
+ /* Service */
+.solutionsAltContainer {
+   margin-top: -240px;
+   position: relative;
 }
 
-.solutionsChangeContent{
+.solutionsServicesMobile {
+    display: none;
+    margin-bottom: -64px;
+}
+
+/* HomePage */
+.solutionsContentContainer {
+    align-items: center;
+    padding: 0 5%;
+    animation: fade-in 2s;
+}
+
+ /* Services */
+.solutionsContentAltContainer {
     display: flex;
-    margin-top: 40px;
+    align-items: center;
+    padding: 0 5%;
+    animation: fade-in 2s;
 }
 
-.solutionsChangeContent img{
-    width: 500px;
-    height: 500px;
-    margin-left: 3%;
+/* HomePage */
+.solutionsButtonsContainer{
+    display: flex;
+    justify-content: center;
 }
 
-.solutionsContainerText{
-    text-align: right;
-    margin-right: 3%;
+/* Service */
+.solutionsButtonsAltContainer{
+    display: flex;
+    justify-items: center;
+    flex-direction: column;
+    margin-right: 5%;
+}
+
+.solutionButton {
     display: flex;
     flex-direction: column;
-    align-items: end;
-}
-.solutionsContainerText.services {
-    text-align: justify;
+    justify-content: center;
+    width: 106px;
+    height: 106px;
+    margin: 0 12px;
     align-items: center;
+    justify-items: center;
+    background-color: #FFF;
+    border: 2px solid #8700A9;
+    border-radius: 20px;
+    color: #8700A9;
+    font-family: 'Scada';
+    font-size: 14px;
+    overflow: hidden;
 }
 
-.solutionsTitle{
+.solutionButton.active {
+    color: #FFF;
+    z-index: -1;
+}
+
+.solutionButton.active img {
+    box-shadow: 0 0 0 4px transparent, 0 0 0 200px #8700A9;
+    transition: box-shadow 2s ease-out;
+    z-index: -2;
+}
+
+.solutionButton img {
+    margin: 4px;
+    padding: 4px;
+    width: 40px;
+    height: 40px;
+    border: 2px solid #8700A9;
+}
+
+/* Common */
+.solutionsTextContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: center;
+}
+
+.solutionsTextContainer h1{
     width: fit-content;
-    border-bottom: #610C7D 8px solid;
-    margin-bottom: 20px;
-}
-
-.solutionsTitle h1{
+    text-align: right;
     font-family: "Scada";
     font-weight: bolder;
     color: #610C7D;
+    border-bottom: 10px solid #610C7D;
+    margin-bottom: 24px;
 }
 
-.solutionsContainerText p{
-    width: 80%;
-    color: #707070;
-    font-family: "Scada";
-    font-size: 25px;
+.solutionsTextContainer p{
     text-align: right;
-    margin-bottom: 20px;
-}
-.solutionsContainerText.services p {
-    text-align: justify;
 }
 
-.solutionsContainerMobile{
+.solutionsServicesMobile p {
+    margin: 0 5%;
+}
+
+/* HomePage */
+.solutionImage {
+    width: 440px;
+}
+
+/* HomePage */
+.solutionsBackground {
+    position: absolute;
+    width: 100%;
+    z-index: -1;
+    top: -25%;
+    left: 50%;
+    margin-left: -40%;
+}
+
+/* Service */
+.solutionBackground {
+    position: absolute;
+    z-index: -1;
+    opacity: 0.2;
+    top: 2%;
+    right: 1%;
+    width: 720px;
+}
+
+.solutionsCardContainer {
     display: none;
 }
 
-.flexColumn {
-    flex-direction: column;
+/** Responsividade **/
+
+/* Mobile */
+
+@media screen and (min-width: 320px) and (max-width: 370px) {
+
+    .solutionButton {
+        width: 88px;
+        height: 88px;
+        font-size: 12px;
+        margin: 0 8px;
+    }
+
+    .solutionButton img{
+        padding: 6px;
+    }
 }
 
-/* Responsividade */
 
-/* 320px — 480px: Mobile devices
-481px — 768px: iPads, Tablets
-769px — 1024px: Small screens, laptops
-1025px — 1200px: Desktops, large screens
-1201px and more —  Extra large screens, TV */
+@media screen and (min-width: 320px) and (max-width: 480px) {
 
+    .solutionsContainer {
+        margin-top: -24px;
+     }
 
-/** Mobile e Tablets **/
-@media screen and (min-width: 320px) and (max-width: 768px) {
+     .solutionsAltContainer {
+        margin-top: -24px;
+     }
 
-    .solutionsContainer{
-        margin-top: 30px;
-        padding: 15px;
-        background: none;
-    }  
+     .solutionsBackground {
+        width: 200%;
+        left: 0;
+        top: 0;
+        margin-left: 0;
+     }
 
-    .solutionsContainer h2{
+    .solutionsContentContainer {
+        display: none;
+    }
+
+    .solutionsContentAltContainer {
+        display: none;
+    }
+
+    .solutionsServicesMobile {
+        display: block;
+    }
+
+    .solutionsCardContainer {
+        display: block;
+    }
+
+    .solutionBackground {
+       display: none;
+    }
+}
+
+@media screen and (min-width: 481px) and (max-width: 768px) {
+
+    .solutionsContainer {
         margin-top: -40px;
+     }
+
+    .solutionsCardContainer {
+        display: block;
     }
 
-    .solutionsContainerButtons{
+    .solutionsAltContainer {
+        margin-top: -24px;
+    }
+
+    .solutionsContentContainer {
         display: none;
     }
-    .solutionsChangeContent{
+
+    .solutionsContentAltContainer {
         display: none;
     }
-    .solutionsContainerMobile{
-        display: flex;
+
+    .solutionsServicesMobile {
+        display: block;
+    }
+
+    .solutionButton {
+        height: 116px;
+        width: 116px;
+        margin: 0 5%;
+        font-size: 16px;
+    }
+    
+    .solutionBackground {
+        display: none;
+    }
+
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+
+    .solutionsContainer {
+        margin-top: -48px;
+    }
+
+    .solutionsAltContainer {
+        margin-top: -48px;
+    }
+
+    .solutionsContentAltContainer {
         flex-direction: column;
     }
-    .solutionsCardMobile {
-        box-shadow: 0px 0px 12px 2px rgba(0,0,0,0.4);
-        border-radius: 30px;
-        text-align: left;
-        margin-bottom: 40px;
-        padding: 20px;
-        font-family: "Scada";
-        color: #707070;
-        margin-right: 16px;
-        margin-left: 16px;
+
+    .solutionsButtonsAltContainer {
+        flex-direction: row;
+        margin-bottom: 24px;
+        margin-right: 0;
     }
 
-    .solutionsCardMobile h1 {
-        font-weight: bolder;
-    }
-
-    .solutionsCardMobile img{
-        width: 12% ;
-    }
-
-    .solutionsCardMobile img:last-of-type{
-        width: 50%;
-        position: absolute;
-        margin-left: 20%;
-        z-index: -1;
-        opacity: 0.2;
-    }
-    .solutionsTitleMobile {
-        width: fit-content;
-        color: #610C7D;
-        border-bottom: #610C7D 7px solid;
-        margin-top: 20px;
-        margin-bottom: 20px;
-    }
-    .solutionsCardMobile p{
-        font-size: 18px;
-    }
 }
 
-/** Mobile: Correção de tamanho de imagens **/
-@media screen and (min-width: 620px) and (max-width: 768px) {
-    .solutionsCardMobile img:last-of-type{
-        width: 40%;
-        margin-left: 35%;
-    }
-}
-
-/** Laptops **/
-@media screen and (min-width: 769px) and (max-width: 1600px) {
-    .solutionsContainer{
-        padding-left: 0px;
-        padding-right: 0px;
-    }
-
-    .solutionsContainer h2 {
-        margin-top: -80px;
-    }
-
-    #solutionsButtonClicked {
-        font-size: 22px;
-    }
-
-    .solutionsChangeContent img{
-        width: 400px;
-        height: 400px;
+@media screen and (min-width: 1025px) and (max-width: 1366px) {
+    
+    .solutionsAltContainer {
+        margin-top: -96px;
     }
 }
