--- a/site_signal/src/components/ServiceInfoPage/serviceInfo.css
+++ b/site_signal/src/components/ServiceInfoPage/serviceInfo.css
@@ -1,7 +1,8 @@
 .serviceInfoContainer {
-   padding: 3%;
+    padding: 3%;
 }
-.serviceInfoContainer{
+
+.serviceInfoContainer {
     display: flex;
     width: 100%;
     gap: 50px;
@@ -18,14 +19,15 @@
     font-size: 24px;
 }
 
-.serviceInfoText{
+.serviceInfoText {
     width: 50%;
 }
 
-.projectImagesDiv{
+.projectImagesDiv {
     width: 50%;
 }
-#depoimentoInfoText{
+
+#depoimentoInfoText {
     display: none;
 }
 .serviceInfoCard {
@@ -47,15 +49,17 @@
     font-size: 24px;
     color: #707070;
 }
-.serviceInfoCard h3{
+
+.serviceInfoCard h3 {
     font-family: 'scada';
     font-size: 1.1rem;
     color: #424242;
-    
+
 }
-.serviceCardAvatar img{
+
+.serviceCardAvatar img {
     border-radius: 50%;
-    width: 200px;    
+    width: 200px;
 }
 
 /* Galeria */
@@ -64,19 +68,19 @@
     display: flex;
 }
 
-.serviceInfoThumb img{
+.serviceInfoThumb img {
     box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.7), 0px 20px 30px rgba(0, 0, 0, 0.3), 0px 10px 50px rgba(0, 0, 0, 0.2);
     background: #FFFFFF;
     border-radius: 5px;
 }
 
-.serviceInfoImagesOptions{
+.serviceInfoImagesOptions {
     display: flex;
     justify-content: space-around;
     margin-bottom: 8%;
 }
 
-.serviceInfoImagesOptions img{
+.serviceInfoImagesOptions img {
     border-radius: 30px;
 
 }
@@ -84,7 +88,7 @@
     position: relative;
 }
 
-.projectImagesMobile{
+.projectImagesMobile {
     display: none;
 }
 
@@ -97,14 +101,15 @@
 1201px and more —  Extra large screens, TV */
 
 @media screen and (min-width: 320px) and (max-width: 768px) {
-    .projectImagesDesktop{
+    .projectImagesDesktop {
         display: none;
     }
-    
-    .projectImagesMobile{
+
+    .projectImagesMobile {
         display: flex;
     }
-    .serviceInfoContainer{
+
+    .serviceInfoContainer {
         display: flex;
         flex-direction: column;
         width: 100%;
@@ -113,11 +118,12 @@
         margin-bottom: -130px;
     }
 
-    .serviceInfoText{
+    .serviceInfoText {
         width: 100%;
         padding: 5%;
     }
-    .projectImagesDiv{
+
+    .projectImagesDiv {
         width: 100%;
     }
 
@@ -132,14 +138,15 @@
         padding-right: 20px;
         color: #707070;
         font-size: 20px;
-        
+
 
     }
     #serviceButtonPurple2 {
         font-size: 15px;
         padding: 10px 20px 10px 20px;
     }
-    #depoimentoInfoText{
+
+    #depoimentoInfoText {
         display: block;
     }
     .serviceInfoCard {
@@ -166,59 +173,62 @@
         font-size: 16px;
         color: #707070;
         margin-top: 30px;
-        margin-left: -88px ;
+        margin-left: -88px;
     }
-    .serviceInfoCard h3{
+
+    .serviceInfoCard h3 {
         font-family: 'scada';
         font-size: 1.1rem;
         color: #424242;
-        
+
     }
-    .serviceCardAvatar img{
+
+    .serviceCardAvatar img {
         border-radius: 50%;
-        width: 78px;    
-        
+        width: 78px;
+
     }
 
     .serviceInfoImagesContainer {
         width: 100%;
     }
 
-    .serviceInfoThumb{
+    .serviceInfoThumb {
         width: 100%;
     }
 
-    .serviceInfoThumb img{
+    .serviceInfoThumb img {
         width: 100%;
         box-shadow: none;
+        border-radius: 0px
     }
 
-    .serviceInfoImagesOptions{
+    .serviceInfoImagesOptions {
         display: flex;
         flex-wrap: wrap;
         margin-top: 25px;
         margin-bottom: 20px;
         width: 100%;
-        
+
     }
 
-    .serviceInfoImages{
+    .serviceInfoImages {
         display: flex;
         justify-content: center;
     }
 
-    .serviceInfoImagesOptions img{
+    .serviceInfoImagesOptions img {
         border-radius: 8px;
     }
 }
 
 @media screen and (min-width: 320px) and (max-width:380px) {
 
-    .serviceInfoThumb img{
+    .serviceInfoThumb img {
         height: 200px;
     }
 
-    .serviceInfoImagesOptions img{
+    .serviceInfoImagesOptions img {
         width: 150px;
         height: 100px;
     }
@@ -228,11 +238,11 @@
 
 @media screen and (min-width: 381px) and (max-width:400px) {
 
-    .serviceInfoThumb img{
+    .serviceInfoThumb img {
         height: 220px;
     }
 
-    .serviceInfoImagesOptions img{
+    .serviceInfoImagesOptions img {
         width: 170px;
         height: 120px;
     }
@@ -240,11 +250,11 @@
 
 @media screen and (min-width: 401px) and (max-width:450px) {
 
-    .serviceInfoThumb img{
+    .serviceInfoThumb img {
         height: 240px;
     }
 
-    .serviceInfoImagesOptions img{
+    .serviceInfoImagesOptions img {
         width: 185px;
         height: 120px;
         margin-left: 10px;
@@ -253,11 +263,11 @@
 
 @media screen and (min-width: 451px) and (max-width:480px) {
 
-    .serviceInfoThumb img{
+    .serviceInfoThumb img {
         height: 260px;
     }
 
-    .serviceInfoImagesOptions img{
+    .serviceInfoImagesOptions img {
         width: 200px;
         height: 135px;
         margin-left: 10px;
@@ -267,11 +277,11 @@
 
 @media screen and (min-width: 481px) and (max-width: 640px) {
 
-    .serviceInfoThumb img{
+    .serviceInfoThumb img {
         height: 320px;
     }
 
-    .serviceInfoImagesOptions img{
+    .serviceInfoImagesOptions img {
         width: 220px;
         height: 155px;
         margin-left: 10px;
@@ -281,11 +291,11 @@
 
 @media screen and (min-width: 641px) and (max-width: 720px) {
 
-    .serviceInfoThumb img{
+    .serviceInfoThumb img {
         height: 350px;
     }
 
-    .serviceInfoImagesOptions img{
+    .serviceInfoImagesOptions img {
         width: 240px;
         height: 175px;
         margin-left: 10px;
@@ -294,11 +304,11 @@
 
 @media screen and (min-width: 721px) and (max-width: 768px) {
 
-    .serviceInfoThumb img{
+    .serviceInfoThumb img {
         height: 380px;
     }
 
-    .serviceInfoImagesOptions img{
+    .serviceInfoImagesOptions img {
         width: 250px;
         height: 175px;
         margin-left: 10px;
@@ -311,14 +321,14 @@
         border-radius: 50%;
         width: 150px;
     }
-    
+
     .serviceInfoCard {
         display: flex;
         gap: 30px;
         flex-direction: column;
         text-align: center;
         padding-right: 0px;
-      }
+    }
 }
 
 @media screen and (min-width: 1000px) and (max-width: 1200px) {
@@ -326,7 +336,7 @@
         border-radius: 50%;
         width: 150px;
     }
-    
+
     /* .serviceInfoCard p{
         font-size: 20px;
     } */
@@ -336,42 +346,64 @@
         gap: 30px;
         text-align: left;
         padding-right: 0px;
-      }
+    }
 }
 
 @media screen and (min-width: 769px) and (max-width: 1499px) {
-    .serviceInfoThumb img{
+    .serviceInfoThumb img {
         width: 100%;
     }
 
-    .serviceInfoImagesOptions img{
+    .serviceInfoImagesOptions img {
         border-radius: 8px;
         width: 190px;
         height: 120px;
     }
 
-    .serviceInfoImagesOptions{
+    .serviceInfoImagesOptions {
         margin-top: 20px;
     }
 }
 
-@media screen and (min-width: 1500px){
+@media screen and (min-width: 1500px) {
 
-    .serviceInfoThumb img{
+    .serviceInfoThumb img {
         width: 100%;
     }
 
-    .serviceInfoImagesOptions img{
+    .serviceInfoImagesOptions img {
         border-radius: 8px;
         width: 280px;
         height: 180px;
     }
-    
-    .serviceInfoImagesOptions{
+
+    .serviceInfoImagesOptions {
         margin-top: 20px;
     }
 
-    .serviceCardAvatar{
+    .serviceCardAvatar {
         margin-top: 30px;
+    }
+}
+
+.testimonialTitleDep{
+    font-family: 'saira'; 
+    font-size: 23px;
+    color: #9C9C9C;
+    font-weight: lighter;
+}
+
+.mobileOnly {
+    display: none; 
+}
+
+.testimonialTitle {
+    font-size: 30px;
+    text-align: center; 
+}
+
+@media only screen and (max-width: 768px) {
+    .mobileOnly {
+        display: block; 
     }
 }
