--- a/site_signal/src/components/HomePage/Solutions/solutions.css
+++ b/site_signal/src/components/HomePage/Solutions/solutions.css
@@ -100,6 +100,27 @@
     border: 2px solid #8700A9;
 }
 
+
+.buttonPurple, .buttonPurple2 {
+    font-family: 'Saira';
+    font-size: 25px;
+    white-space: nowrap;
+    margin-bottom: 53px; 
+    border-radius: 50px;
+    width: 315.56px;
+    height: 88px;   
+}
+
+/* Outros estilos específicos para os botões roxos */
+.buttonPurple {
+    color: black;
+}
+
+.buttonPurple2 {
+    color: white;
+}
+
+
 /* Common */
 .solutionsTextContainer {
     display: flex;
@@ -126,6 +147,14 @@
     margin: 0 5%;
 }
 
+p.content {
+    color: #707070;
+    text-align: left;
+    line-height: 50px;
+    font-size: 24px;  
+    font-family: 'Saira';
+    
+}
 /* HomePage */
 .solutionImage {
     width: 440px;
