fix: cor de fundo dos botões branca, seguindo o Figma

--- a/site_signal/src/components/HomePage/Solutions/solutions.css
+++ b/site_signal/src/components/HomePage/Solutions/solutions.css
@@ -114,6 +114,7 @@
 /* Outros estilos específicos para os botões roxos */
 .buttonPurple {
     color: black;
+    background-color: white;
 }
 
 .buttonPurple2 {
