--- a/site_signal/src/components/HomePage/Header/header.css
+++ b/site_signal/src/components/HomePage/Header/header.css
@@ -75,7 +75,7 @@
 @media screen and (min-width: 320px) and (max-width: 480px) {
 
     .hdrContainer {
-        height: 460px;
+        height: 405px;
     }
 
     #serviceInfoHeaderContainer{
@@ -87,13 +87,13 @@
     }
 
     .hdrTextContainer h1 {
-        text-align: left;
+        text-align: center;
         padding-top: 96px;
         font-size: 28px;
     }
 
     .hdrTextContainer p {
-        text-align: left;
+        text-align: center;
         font-size: 16px;
     }
 
@@ -106,7 +106,7 @@
 @media screen and (min-width: 481px) and (max-width: 768px) {
 
     .hdrContainer {
-        height: 600px;
+        height: 508px;
     }
 
     #serviceInfoHeaderContainer{
@@ -114,14 +114,15 @@
     }
 
     .hdrTextContainer h1 {
-        text-align: left;
+        text-align: center;
         padding-top: 108px;
         font-size: 44px;
     }
 
     .hdrTextContainer p {
-        text-align: left;
+        text-align: center;
         font-size: 20px;
+        padding: 0 32px;
     }
 
     .hdrSocialMediaContainer {
@@ -130,11 +131,11 @@
 
 }
 
-/** Laptops: Large Screen **/
+/** Laptops: Large Screen (1024 x 768...) **/
 @media screen and (min-width:769px) and (max-width: 1023px) {
 
     .hdrContainer {
-        height: 700px;
+        height: 580px;
     }
 
     #serviceInfoHeaderContainer{
@@ -147,6 +148,8 @@
 
     .hdrTextContainer h1 {
         font-size: 48px;
+        text-align: center;
+        padding-top: 96px;
     }
 
     .hdrTextContainer p {
@@ -162,7 +165,7 @@
 @media screen and (min-width: 1024px) and (max-width: 1366px) {
 
     .hdrContainer {
-        height: 720px;
+        height: 616px;
     }
 
     #serviceInfoHeaderContainer{
