--- a/site_signal/src/components/HomePage/Solutions/solutions.css
+++ b/site_signal/src/components/HomePage/Solutions/solutions.css
@@ -74,7 +74,7 @@
     justify-items: center;
     background-color: #FFF;
     border: 2px solid #8700A9;
-    border-radius: 20px;
+    border-radius: 25px;
     color: #8700A9;
     font-family: 'Scada';
     font-size: 14px;
@@ -92,12 +92,14 @@
     z-index: -2;
 }
 
+/* img mobile */
 .solutionButton img {
     margin: 4px;
     padding: 4px;
-    width: 40px;
-    height: 40px;
+    width: 45%;
+    height: 45%;
     border: 2px solid #8700A9;
+    border-radius: 50%;
 }
 
 
